--- a/Cineview/app/src/main/res/layout/activity_login.xml
+++ b/Cineview/app/src/main/res/layout/activity_login.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".features.login.LoginActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/buttonTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        android:textColor="@color/white"
-        android:layout_gravity="center"
-        />
+        android:layout_gravity="center" />
 
 </FrameLayout>
