--- a/Cineview/app/src/main/res/values/colors.xml
+++ b/Cineview/app/src/main/res/values/colors.xml
@@ -7,4 +7,17 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FFFF0000</color>
+    <color name="red_dark">#FFCC0000</color>
+    <color name="grey_light">#FFBFBFBF</color>
+    <color name="grey_dark">#FF808080</color>
+    <color name="black_light">#FF332424</color>
+    <color name="yellow">#FFFFFF00</color>
+
+    <color name="background_1">@color/black</color>
+    <color name="backdround_2">@color/black_light</color>
+
+    <color name="title_color">@color/white</color>
+    <color name="subtitle_1_color">@color/grey_light</color>
+    <color name="subtitle_2_color">@color/grey_dark</color>
 </resources>
