--- a/Cineview/app/src/main/res/layout/activity_login.xml
+++ b/Cineview/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,11 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".features.login.LoginActivity">
 
-    <Button
-        android:id="@+id/buttonTest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:layout_gravity="center" />
 
-</FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
