--- a/Cineview/app/src/main/res/layout/cast_item.xml
+++ b/Cineview/app/src/main/res/layout/cast_item.xml
@@ -2,10 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="@dimen/margin_low"
-    android:paddingEnd="@dimen/margin_low"
-    android:paddingTop="@dimen/margin_medium"
-    android:paddingBottom="@dimen/margin_medium"
+    android:padding="@dimen/margin_medium"
     android:layout_gravity="center_horizontal"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -21,7 +18,7 @@
 
     <TextView
         android:id="@+id/tvCastItemName"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
@@ -32,7 +29,7 @@
 
     <TextView
         android:id="@+id/tvCastItemCharacter"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
