--- a/Cineview/app/src/main/res/layout/fragment_details.xml
+++ b/Cineview/app/src/main/res/layout/fragment_details.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/rvDetailsFragItems"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".features.movie.DetailsFragment"
-    android:background="@color/black_light">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvDetailsFragItems"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/details_item"
-        tools:itemCount="5"
-        />
-
-</FrameLayout>
+    tools:context=".features.movie.apresentation.ui.DetailsFragment"
+    tools:listitem="@layout/details_item"
+    tools:itemCount="5"
+    />
