--- a/Cineview/app/src/main/res/layout/cast_item.xml
+++ b/Cineview/app/src/main/res/layout/cast_item.xml
@@ -2,19 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/margin_medium"
     android:layout_gravity="center_horizontal"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@color/black_light">
 
-    <ImageView
-        android:id="@+id/ivCastItemImage"
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="83dp"
         android:layout_height="125dp"
         android:layout_gravity="center"
-        android:src="@drawable/actor_example"
-        />
+        app:cardCornerRadius="5dp"
+        android:backgroundTint="@android:color/transparent">
+
+        <ImageView
+            android:id="@+id/ivCastItemImage"
+            android:contentDescription="@string/content_description_cast_member_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/actor_example"
+            />
+
+    </com.google.android.material.card.MaterialCardView>
 
     <TextView
         android:id="@+id/tvCastItemName"
