--- a/Cineview/app/src/main/res/layout/fragment_movie.xml
+++ b/Cineview/app/src/main/res/layout/fragment_movie.xml
@@ -22,7 +22,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:adjustViewBounds="true"
-            android:src="@drawable/mortal_kombat_example"
+            android:src="@drawable/mortal_kombat_backdrop"
             />
 
         <TextView
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_default"
             android:textColor="@color/title_color"
-            android:textSize="@dimen/title_size"
+            android:textSize="@dimen/title_1_size"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/ivMovieFragBackdrop"
             app:layout_constraintEnd_toStartOf="@id/tvMovieFragRateCount"
@@ -88,7 +88,8 @@
             app:cardCornerRadius="30dp"
             app:layout_constraintTop_toBottomOf="@id/tvMovieFragOverview"
             app:layout_constraintStart_toStartOf="@id/tvMovieFragOverview"
-            app:layout_constraintEnd_toStartOf="@id/cvMovieFragShare">
+            app:layout_constraintEnd_toEndOf="@id/tvMovieFragOverview"
+            app:layout_constraintHorizontal_bias="0.37">
 
             <ImageView
                 android:importantForAccessibility="no"
@@ -112,8 +113,9 @@
             app:cardCornerRadius="30dp"
             app:layout_constraintTop_toTopOf="@id/cvMovieFragFavorite"
             app:layout_constraintBottom_toBottomOf="@id/cvMovieFragFavorite"
-            app:layout_constraintStart_toEndOf="@id/cvMovieFragFavorite"
-            app:layout_constraintEnd_toEndOf="@id/tvMovieFragOverview">
+            app:layout_constraintStart_toStartOf="@id/tvMovieFragOverview"
+            app:layout_constraintEnd_toEndOf="@id/tvMovieFragOverview"
+            app:layout_constraintHorizontal_bias="0.63">
 
             <ImageView
                 android:importantForAccessibility="no"
@@ -136,7 +138,7 @@
             app:layout_constraintStart_toStartOf="@id/tvMovieFragOverview"
             app:layout_constraintEnd_toStartOf="@id/tvMovieFragReleaseDate"
             android:text="@string/release_date_movie_frag"
-            android:textSize="@dimen/subtitle_2_size"
+            android:textSize="@dimen/subtitle_3_size"
             android:textColor="@color/grey_dark"
             />
 
@@ -149,7 +151,7 @@
             app:layout_constraintBottom_toBottomOf="@id/tvMovieFragReleaseText"
             app:layout_constraintStart_toEndOf="@id/tvMovieFragReleaseText"
             android:text="07/04/2021"
-            android:textSize="@dimen/subtitle_2_size"
+            android:textSize="@dimen/subtitle_3_size"
             android:textColor="@color/grey_dark"
             />
 
@@ -161,7 +163,7 @@
             app:layout_constraintStart_toStartOf="@id/tvMovieFragReleaseText"
             app:layout_constraintEnd_toStartOf="@id/tvMovieFragRuntimeDuration"
             android:text="@string/runtime_movie_frag"
-            android:textSize="@dimen/subtitle_2_size"
+            android:textSize="@dimen/subtitle_3_size"
             android:textColor="@color/grey_dark"
             />
 
@@ -174,7 +176,7 @@
             app:layout_constraintBottom_toBottomOf="@id/tvMovieFragRuntimeText"
             app:layout_constraintStart_toEndOf="@id/tvMovieFragRuntimeText"
             android:text="110min"
-            android:textSize="@dimen/subtitle_2_size"
+            android:textSize="@dimen/subtitle_3_size"
             android:textColor="@color/grey_dark"
             />
 
