--- a/Cineview/app/src/main/res/layout/activity_login.xml
+++ b/Cineview/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/loginFragment"
-        android:name="com.github.grupo6cineview.cineview.features.login.LoginTelaFragment"
+        android:name="com.github.grupo6cineview.cineview.features.search.presentation.ui.SearchFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
