--- a/Cineview/app/src/main/res/layout/activity_splash.xml
+++ b/Cineview/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".features.splash.SplashActivity"
+    tools:context=".features.SplashActivity"
     android:background="@color/background_1">
 
     <com.airbnb.lottie.LottieAnimationView
