--- a/Cineview/app/src/main/res/layout/fragment_cadastro_tela.xml
+++ b/Cineview/app/src/main/res/layout/fragment_cadastro_tela.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.login.CadastroTelaFragment">
+    tools:context=".features.register.CadastroTelaFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
