--- a/Cineview/app/src/main/res/layout/fragment_search.xml
+++ b/Cineview/app/src/main/res/layout/fragment_search.xml
@@ -41,7 +41,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Buscar"
+                    android:hint="@string/bottom_nav_item_search"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
