--- a/Cineview/app/src/main/res/layout/fragment_search.xml
+++ b/Cineview/app/src/main/res/layout/fragment_search.xml
@@ -16,16 +16,16 @@
             android:id="@+id/abFavFragTopAppBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:layout_margin="@dimen/margin_medium"
             android:background="@color/black"
             app:contentInsetStart="0dp"
             app:layout_scrollFlags="scroll|enterAlways|snap"
             style="@style/Widget.MaterialComponents.Toolbar.Primary">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/outlinedTextField"
+                android:id="@+id/ilSearchFragSearchField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_medium"
                 android:layout_gravity="center"
                 app:hintEnabled="false"
                 app:boxBackgroundColor="@color/white"
@@ -36,11 +36,14 @@
                 app:boxStrokeWidth="0dp"
                 app:boxStrokeWidthFocused="0dp"
                 app:startIconDrawable="@drawable/ic_baseline_search"
+                app:endIconMode="clear_text"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingTop="@dimen/margin_medium"
+                    android:paddingBottom="@dimen/margin_medium"
                     android:hint="@string/bottom_nav_item_search"
                     />
 
