--- a/Cineview/app/src/main/res/layout/movie_item.xml
+++ b/Cineview/app/src/main/res/layout/movie_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
+    android:id="@+id/cvMovieItemMovie"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:focusable="true"
-    android:focusableInTouchMode="true"
     android:layout_width="wrap_content"
     android:layout_height="230dp"
     android:layout_gravity="center_horizontal"
