Api Architecture + update Home

--- a/Cineview/app/src/main/res/navigation/nav_graph_main.xml
+++ b/Cineview/app/src/main/res/navigation/nav_graph_main.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.github.grupo6cineview.cineview.features.home.presentation.ui.HomeFragment"
+        android:name="com.github.grupo6cineview.cineview.features.home.view.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
