Initial Config Call Api on Search Screen

--- a/Cineview/app/src/main/res/layout/fragment_search.xml
+++ b/Cineview/app/src/main/res/layout/fragment_search.xml
@@ -40,6 +40,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tietSearchFragSearchField"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="@dimen/margin_medium"
